all files have been updated

--- a/views/PetOrder2.html
+++ b/views/PetOrder2.html
@@ -9,10 +9,10 @@
 <div class="container">
     <form action="summary" method="post">
 
-        <h1>Order a Pet</h1>
-        <label>Pet Name<input type="text" name="name">
+        <h1>Choose your pet's name</h1>
+        <label>Pet's Name<input type="text" name="name">
         </label>
-        <button type="submit"> Order summary</button>
+        <button type="submit"> submit</button>
     </form>
 
 </div><body>
