--- a/views/PetHome.html
+++ b/views/PetHome.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Pet Home</h1>
 <img src="images/pet-quotes.jpg" alt="images of pets" width= "300"height="200">
-<a href="order"><button class="btn btn-primary" type="submit">Order a Pet</button></a>
+<a href="order1"><button class="btn btn-primary">Submit</button></a>
 </body>
 </html>
