--- a/views/PetOrder.html
+++ b/views/PetOrder.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Pet store</title>
 </head>
 <body>
 <div class="container">
     <form class="myForm" action="order2" method="post">
 
-        <h1>Order a Pet</h1>
+        <h1>Choose your pet</h1>
         <!-- Pet Type -->
-        <label class="d-block">What kind of pet are you looking for?<input type="text" name="animal" placeholder="petkind">
+        <label class="d-block">What kind of pet are you looking for?<input type="text" name="animal" placeholder="pet kind">
         </label>
 
         <!-- Pet Color -->
-        <label class="fw-bold d-block mt-2" for="color">choose a Color</label>
+        <label class="fw-bold d-block mt-2" for="color">Choose a Color</label>
         <select id="color" name="color">
             <option value="hazel">hazel</option>
-            <option value="light green"> light Green</option>
+            <option value="light blue"> light blue</option>
             <option value="black">Black</option>
         </select>
 
         <!-- Submit Order -->
-        <button type="submit">Place my order</button>
+        <button type="submit">Submit</button>
     </form>
 
 </div>
