--- a/views/PetOrder.html
+++ b/views/PetOrder.html
@@ -1,3 +1,13 @@
+
+<!--
+ zahra madhar
+ project:pets website
+ pet order page
+ sdev 328
+
+ -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,25 +20,19 @@
     <form class="myForm" action="order2" method="post">
 
         <h1>Choose your pet</h1>
-        <!-- Pet Type -->
         <label class="d-block">What kind of pet are you looking for?<input type="text" name="animal" placeholder="pet kind">
         </label>
-
-        <!-- Pet Color -->
         <label class="fw-bold d-block mt-2" for="color">Choose a Color</label>
         <select id="color" name="color">
             <option value="hazel">hazel</option>
             <option value="light blue"> light blue</option>
             <option value="black">Black</option>
         </select>
-
-        <!-- Submit Order -->
         <button type="submit">Submit</button>
     </form>
 
 </div>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
