--- a/views/PetOrder.html
+++ b/views/PetOrder.html
@@ -20,7 +20,7 @@
     <form class="myForm" action="order2" method="post">
 
         <h1>Choose your pet</h1>
-        <label class="d-block">What kind of pet are you looking for?<input type="text" name="animal" placeholder="pet kind">
+        <label class="d-block">What kind of pet are you looking for?<input type="text" name="animal">
         </label>
         <label class="fw-bold d-block mt-2" for="color">Choose a Color</label>
         <select id="color" name="color">
