--- a/views/OrderSummary.html
+++ b/views/OrderSummary.html
@@ -18,8 +18,9 @@
 <body>
 
 <h1>Thank you for your Order!</h1>
-<p>Order: {{ @SESSION.color }} {{ @SESSION.animal }}</p>
-<p>Name: {{ @SESSION.petName }}</p>
+<p>Pet Kind: {{ @SESSION.animal }}</p>
+<p>Pet Color: {{ @SESSION.color }}</p>
+<p>Pet Name: {{ @SESSION.petName }}</p>
 
 
 
