--- a/views/PetOrder2.html
+++ b/views/PetOrder2.html
@@ -20,7 +20,7 @@
     <form action="summary" method="post">
 
         <h1>Choose your pet's name</h1>
-        <label>Pet's Name<input type="text" name="name">
+        <label>Pet's Name<input type="text" name="petName">
         </label>
         <button type="submit"> submit</button>
     </form>
